Update local changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <!-- Barra de navegación -->
+ 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
       <a class="navbar-brand" href="#">Gisela Astudillo</a>
@@ -52,7 +52,7 @@
     <ul class="list-group">
       <li class="list-group-item">
         <strong>Diseñadora Web Freelance</strong> (Presente)<br />
-        Diseño de sitios para emprendedores.
+        Diseño de sitios web para emprendedores.
       </li>
       <li class="list-group-item">
         <strong>Asistente de diseño</strong> <br />
